# ILI9488-Driver

./: CMakeLists.txt  LICENSE.txt  README.md
include/: fbcp_dma.h  gpu_mailbox.h  gpu_rotate.h  ili9488_dma.h  ili9488_mailbox.h  ili9488_rotate.h  pixel_utils.h  spi_dma_linux.h
packaging/: postinst
scripts/: benchmark.sh  benchmark_results.txt  build.sh  deploy.sh  frame_generator.c  setup.sh
src/: fbcp_daemon.cpp  fbcp_dma.cpp  gpu_mailbox.cpp  gpu_rotate.cpp  ili9488_daemon.cpp  ili9488_dma.cpp  ili9488_mailbox.cpp  ili9488_rotate.cpp  pixel_utils.cpp  spi_dma_linux.cpp
systemd/: fbcp-daemon.conf  fbcp-daemon.service  ili9488-daemon.conf  ili9488-daemon.service
